--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	<!--开发者信息-->
     <developers>
         <developer>
-            <id>qwertyuiopasdfghjklzxcvbnm</id>
+            <id>wangxiaoer</id>
             <name>why</name>
             <email>15809859070@163.com</email>
             <roles>
@@ -52,7 +52,7 @@
 	<profiles>
         <profile>
             <!--注意,此id必须与setting.xml中指定的一致,不要自作聪明改它名字-->
-            <id>why</id>
+            <id>wangxiaoer</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
@@ -65,7 +65,7 @@
                         <version>1.6.7</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <serverId>why</serverId>
+                            <serverId>wangxiaoer</serverId>
                             <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
@@ -123,11 +123,11 @@
             <distributionManagement>
                 <snapshotRepository>
                    <!--注意,此id必须与setting.xml中指定的一致-->
-                   <id>why</id>
+                   <id>wangxiaoer</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                 </snapshotRepository>
                 <repository>
-                    <id>why</id>
+                    <id>wangxiaoer</id>
               <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                 </repository>
             </distributionManagement>
